<resources>
    <string name="app_name">Scheduler</string>
    <string name="butts">Butts</string>
    <string name="bine_ai_venit_la_uscheduler">Bine ai venit la Uscheduler!</string>
    <string name="welcome_to_uscheduler">Welcome to Uscheduler!</string>
    <string name="pressme">PressMe</string>
    <string name="name">Name</string>
    <string name="backgroundmain">BackgroundMain</string>
    <string name="seria_grupa">Seria, Grupa</string>
    <string name="enroll">Enroll</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="openmenu">OpenMenu</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="profile">Profile</string>
    <string name="notes">Notes</string>
    <string name="map">Map</string>
    <string name="to_do">TO-DO</string>
    <string name="about_us">About Us</string>
    <string name="decanat_electronica_pub_ro">decanat@electronica.pub.ro</string>
    <string name="nothing_passed">Student ETTI</string>
    <string name="large_text">LMAOOO</string>
    <string name="write_smth">Write smth</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="longAboutText">This project started out as a small ideea with a much bigger dream, and while at this moment the application is small, we hope that one day it will end up as big as our initial dream.</string>
    <string name="shortAboutText">The people who made this possible are:</string>
    <string name="PplWhoWorked">Andrei Emanuel - Marius</string>
    <string name="PplWhoTried1">Boricean Ana - Maria</string>
    <string name="PplWhoTried2">Dragusin Marian-Alexandru</string>
    <string name="PplWhoTried3">Badea Constantin-Catalin</string>
    <string name="PplWhoTried4">Ghiold George-Catalin</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>