<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.scheduler.ui.About.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about"/>

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.scheduler.ui.Map.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.scheduler.ui.Notes.NotesFragment"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.scheduler.ui.Profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.scheduler.ui.ToDo.ToDoFragment"
        android:label="@string/to_do"
        tools:layout="@layout/fragment_todo"/>
</navigation>